back template files

--- a/TelosysTools/templates/python-template/templates.cfg
+++ b/TelosysTools/templates/python-template/templates.cfg
@@ -16,6 +16,7 @@ Python generic dao			; generic_dao.py				; commons				; python_dao.vm							; 1
 Python get connexion		; get_connexion.py				; commons				; python_get_connexion.vm				; 1
 Python json serializer		; ${BEANNAME}JsonSerializer.py 	; jsonSerializer		; python_json_serializer.vm				; *
 
-Tests unitaires				; test_unitaire.py				; commons/TestDaoUni	; test_unitaire_dao.vm					; 1
+Unit test					; unit_test_${BEANNAME}.py		; commons/UnitTest		; python_unit_test.vm					; *
+Test launcher				; test.py						;						; python_test_launcher.vm				; *
 
 Config database				; config.cfg					; commons				; config.cfg							; 1
