--- a/templates-back-final/templates.cfg
+++ b/templates-back-final/templates.cfg
@@ -8,15 +8,19 @@
 # . value 5 : number of execution : "1" for "ONCE" for all entities, default is multiple executions ( executed for each entity )
 #---------------------------------------------------------
 
-Python entity class			; ${BEANNAME}.py				; entities				; python_entity_class.vm				; *
-Python entity service		; ${BEANNAME}_service.py		; services				; python_entity_service.vm				; *
-Python entity ressource		; ${BEANNAME}_ressource.py		; ressources			; python_entity_ressource.vm			; *
-Python serveur launcher		; app.py						; 						; python_serveur_launcher.vm			; 1
-Python generic dao			; generic_dao.py				; commons				; python_dao.vm							; 1
-Python get connexion		; get_connexion.py				; commons				; python_get_connexion.vm				; 1
-Python json serializer		; ${BEANNAME}JsonSerializer.py 	; jsonSerializer		; python_json_serializer.vm				; *
+Python entity class			; ${BEANNAME}.py					; entities				; python_entity_class.vm				; *
+Python json serializer		; ${BEANNAME}_json_serializer.py 	; JsonSerializer		; python_json_serializer.vm				; *
 
-Unit test					; unit_test_${BEANNAME}.py		; commons/UnitTest		; python_unit_test.vm					; *
-Test launcher				; test.py						;						; python_test_launcher.vm				; *
+Python entity service		; ${BEANNAME}_service.py			; services				; python_entity_service.vm				; *
+Python common service		; common_service.py					; services/commons		; python_common_service.vm				; 1
 
-Config database				; config.cfg					; commons				; config.cfg							; 1
+Python entity resource		; ${BEANNAME}_resource.py			; resources				; python_entity_resource.vm				; *
+Python common resource		; common_resource.py				; resources/commons     ; python_common_resource.vm				; 1
+
+Python serveur launcher		; app.py							; 						; python_serveur_launcher.vm			; 1
+
+Python generic dao			; generic_dao.py					; commons				; python_dao.vm							; 1
+Python get connection		; get_connection.py					; commons				; python_get_connection.vm				; 1
+
+Unit test					; ${BEANNAME}_unit_test_.py			; commons/UnitTest		; python_unit_test.vm					; *
+Test launcher				; test.py							;						; python_test_launcher.vm				; *
