update after review

--- a/templates-back-final/templates.cfg
+++ b/templates-back-final/templates.cfg
@@ -12,15 +12,16 @@ Python entity class			; ${BEANNAME}.py					; entities				; python_entity_class.v
 Python json serializer		; ${BEANNAME}_json_serializer.py 	; JsonSerializer		; python_json_serializer.vm				; *
 
 Python entity service		; ${BEANNAME}_service.py			; services				; python_entity_service.vm				; *
-Python common service		; common_service.py					; services/commons		; python_common_service.vm				; 1
 
 Python entity resource		; ${BEANNAME}_resource.py			; resources				; python_entity_resource.vm				; *
 Python common resource		; common_resource.py				; resources/commons     ; python_common_resource.vm				; 1
 
 Python serveur launcher		; app.py							; 						; python_serveur_launcher.vm			; 1
 
-Python generic dao			; generic_dao.py					; commons				; python_dao.vm							; 1
-Python get connection		; get_connection.py					; commons				; python_get_connection.vm				; 1
+Python generic dao			; common_dao.py						; dao/commons			; python_generic_dao.vm					; 1
+Python entity dao			; ${BEANNAME}_dao.py				; dao					; python_entity_dao.vm					; *
+
+Python data provider		; data_provider.py					; commons				; python_data_provider.vm				; 1
 
 Unit test					; ${BEANNAME}_unit_test_.py			; commons/UnitTest		; python_unit_test.vm					; *
 Test launcher				; test.py							;						; python_test_launcher.vm				; *
